# cooldesk-extension

./: .gitignore  AppFocus.cs  AppScanner.cs  DEPLOY.md  README.md  RUST_WEB_DEV_GUIDE.md  SIDECAR_RUST_MIGRATION_PLAN.md  STATUS_CODE_15.md  SYNC_PLAN.md  a.json  a1.json  a4.json  a5.json  a6.json  app_output.txt  apps.json  background.js  build-sidecar.ps1  dashboard.js  debug_output.txt  electron-main.js  electron-preload.js  extension.html  index.html  manifest.json  package-lock.json  package.json  popup.html  popup.js  recent.json  response.txt  server.js  test_nano.js  url.md  vite.config.js  web-landing.html
.claude/: App.md  Notes.md  Release.md  Tabs.md  Workspace.md  settings.local.json
.github/workflows/: logs.md  release.yml
docs/: CROSS_PLATFORM_FOCUS.md  KNOWLEDGE_GRAPH.md  SEARCH_ALGORITHM_IMPROVEMENTS.md  TIERED_URL_QUALIFICATION_PLAN.md  debug-service-worker.md
extension/: .gitignore  AppFocus.cs  AppScanner.cs  BrowserFocus.cs  CLAUDE.md  COMMANDS_USER_GUIDE.md  COMMAND_IMPLEMENTATION.md  DATABASE_CLEANUP_SUMMARY.md  DRAGGABLE_SECTIONS.md  ELECTRON_README.md  FEATURE_ARCHITECTURE.md  FINAL_FIX.md  GEMINI.md  GLOBAL_ADD_BUTTON_INTEGRATION.md  ML-FIX-SERVICE-WORKER.md  ML-IMPLEMENTATION-COMPLETE.md  ML-IMPLEMENTATION-PLAN.md  PRIVACY.md  PRODUCTION_READINESS.md  PROJECT_AUTO_CATEGORIZATION.md  README.md  SERVICE_WORKER_FIX.md  TEAM_PERMISSIONS.md  TEST_CHAT_SCRAPER.md  WORKING_FEATURES.md  apps_output.json  auth-callback.html  background.js  check-tiptap.js  commandcenter.md  data.html  debug-highlights.js  debug-workspaces.js  dist.7z  electron-main.js  electron-preload.js  features_request.txt  find_netflix.js  howToUse.tsx  index.html  (+16 more)
extension/.claude/: Overview.md  settings.local.json
extension/dist-electron/: index.html
extension/extension/: package-lock.json  package.json
extension/native-host/: com.cooldesk.sync.json  host.bat  host.py  install.py
extension/release/: README.md
extension/scripts/: AppScanner.ps1  analyze-dashboard-data.js  analyze-sync-data-v2.js
extension/sidecar/: package-lock.json  package.json  server.js
extension/src/: App.css  App.jsx  SidebarApp.jsx  Untitled-1.html  background.js  chatScraper.js  contentInteractions.js  db.js  defaul.jsx  electron-shim.js  extension.code-workspace  footerBar.js  index.css  interactionContent.js  main.jsx  popup.js  prompts.js  sample.js  search.css  sidebar.jsx  spotlight-main.jsx  theme-loader.js  utils.js  worker.js
extension/src-tauri/: Cargo.toml  tauri.conf.json
extension/sync-data/: sync-data.json
scripts/: AppScanner.cs  AppScanner.csproj  analyze-sync-data.js  build-appscanner.ps1  clean-sync-data.js  generate-cert-secret.ps1  inspect-dashboard-nested.js  retag.sh  scan-apps-windows.js
sidecar/: localLLM.js  server-test.js  server.bundle.js  server.bundle.mjs  server.js
src/: App.jsx  ExtensionApp.jsx  SidebarApp.jsx  electron-shim.js  extension-main.jsx  index.css  main.jsx  spotlight-main.jsx
src-tauri/: Cargo.toml  build_output.txt  lohs.txt  res.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: categorize.rs  focus.rs  lib.rs  matcher.rs  scanner.rs  system.rs
src-tauri/src/sidecar/: data.rs  handlers.rs  mod.rs  search_db.rs  server.rs  storage.rs  sync.rs
src-tauri/src/sidecar/feedback/: mod.rs  patterns.rs  rewards.rs  store.rs  tests.rs  types.rs
src-tauri/src/sidecar/llm/: engine.rs  inference.rs  mod.rs  models.rs  tasks.rs
src-tauri/src/sidecar/llm-2/: README.md
src-tauri/src/sidecar/llm_v2/: README.md  agent.rs  client.rs  conversation.rs  memory.rs  mod.rs  simple_agent.rs  tools.rs
src-tauri/src/sidecar/llm_v3/: agent.rs  config.rs  mod.rs  simple_agent.rs  tools.rs
src/ai/: localLLM.js
src/background/: activity.js  background.js  bridge.js  data.js  searchIndexer.js  taskManager.js  urlNotesHandler.js  worker.js  workspaces.js
src/components/: GlobalSpotlight.css  GlobalSpotlight.jsx  footerBar.js
src/content-scripts/: activity-tracker.js  interactionContent.js
src/data/: appstore.json  appstoreVersion.js  categories.js  scrapper.json
src/db/: app-db.js  error-handler.js  index.js  migration-manager.js  unified-api.js  unified-api.js_snippet  unified-db.js  validation.js
src/hooks/: useDashboardData.js  useOnboarding.js  useSync.js
src/scrapers/: calendarScraper.js  clickToScrape.js  genericLinkScraper.js
src/services/: a.txt  activityService.js  appCategorizationService.js  categorizationManager.js  chromePolyfill.js  cloudflareService.js  commandActions.js  commandExecutor.js  conditionalSync.js  environmentDetector.js  extensionApi.js  feedbackService.js  graphService.js  localAIService.js  nanoAIService.js  noteTemplates.js  pageInteractionService.js  runningAppsService.js  searchService.js  syncConfig.js  syncContextService.js  syncOrchestrator.js  syncWebSocket.js  voiceCommandProcessor.js
test/: test_api.js  test_categorization.js  test_features.js  test_focus.js  test_llm_v2.js  test_simple_chat.js  test_visible.js  test_web_search.js
(+430 files in other folders)
