[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
llm = ["llama-cpp-2"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
sysinfo = "0.30"
tauri-plugin-global-shortcut = "2"

# Sidecar server dependencies
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
chrono = "0.4"
url = "2"
rand = "0.8"

# Phase 2 ML/LLM dependencies (optional — compile with --features llm)
llama-cpp-2 = { version = "0.1", optional = true }
dirs = "5.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
rig-core = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
async-stream = "0.3"
tracing = "0.1"
lazy_static = "1.5.0"
encoding_rs = "0.8.35"
async-trait = "0.1"
urlencoding = "2.1"

# Feedback/RL dependencies
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "matcher"
path = "src/bin/matcher.rs"

[[bin]]
name = "AppScannerMac"
path = "src/bin/scanner_mac.rs"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_Packaging_Appx"
] }
